syntax = "proto3";

package mixer.v1.config.template;
import "google/protobuf/descriptor.proto";

enum TemplateVariety {
    TEMPLATE_VARIETY_UNSPECIFIED = 0;
    TEMPLATE_VARIETY_CHECK = 1;
    TEMPLATE_VARIETY_REPORT = 2;
}

extend google.protobuf.FileOptions {
    TemplateVariety template_variety = 72295727;
}

extend google.protobuf.FieldOptions {
    bool is_expr = 72295728;
}

extend google.protobuf.FileOptions {
    string template_name = 72295729;
}
