syntax = "proto3";

package istio.mixer.adapter.sample.check;

import "mixer/v1/config/descriptor/value_type.proto";
import "pkg/adapter/template/TemplateExtensions.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";

option (istio.mixer.v1.config.template.template_variety) = TEMPLATE_VARIETY_CHECK;
option (istio.mixer.v1.config.template.template_name) = "Sample";

message Template {
    string check_expression = 1;
    map<string, string> stringMap = 2;
    google.protobuf.Timestamp timeStamp = 9;
    google.protobuf.Duration duration = 10;
}
