syntax = "proto3";

package foo.bar;

import "mixer/v1/template/extensions.proto";
import "mixer/v1/config/descriptor/value_type.proto";

option (istio.mixer.v1.template.template_variety) = TEMPLATE_VARIETY_ATTRIBUTE_GENERATOR;

message Template {}
message OutputTemplate {
    istio.mixer.v1.config.descriptor.ValueType val = 5;
}
